# apidiff

./: CLAUDE.md  Cargo.toml  README.md
src/: change.rs  changes.rs  diff.rs  loader.rs  main.rs
src/diff/: tests.rs
src/loader/: tests.rs
tests/fixtures/: new.yaml  old.yaml
