[package]
name = "apidiff"
version = "0.1.0"
edition = "2024"
description = "Compare API specifications"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
openapiv3 = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
serde_yml = "0.0.12"

[dev-dependencies]
tempfile = "3.24.0"
